# forager-test-task

./: README.md  pyproject.toml  setup.cfg
weather_client/: __init__.py  data_parsers.py  exceptions.py  mixins.py  settings.py  weather_api_client.py  weather_api_endpoints.py  weather_api_request_handler.py  weather_api_requests.py  weather_client.py  weather_data_classes.py  weather_data_managers.py  weather_service.py
weather_client/weather_data_classes/: __init__.py  base_data_class.py  forecast_data_class.py  weather_data_class.py
weather_client/weather_data_managers/: __init__.py  base_data_manager.py  base_result_manager.py  forecast_data_manager.py  forecast_result_manager.py  weather_data_manager.py  weather_result_manager.py
