[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "weather_client"
version = "0.1.0"
description = ""
authors = ["Ihor Prokopenko <i.prokopenko.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
mypy = "^1.8.0"
pydantic = "^2.5.3"
types-requests = "^2.31.0.20240106"

